--- a/foundry.toml
+++ b/foundry.toml
@@ -1,3 +1,6 @@
-# Friday Quiz 1
+[profile.default]
+src = "src"
+out = "out"
+libs = ["lib"]
 
-A new bridge to another L2 has been deployed and someone just deposited a bunch of WETH...
+# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
